[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha256 = "1.6.0"
uuid = { version = "1.22.0", features = ["v7"] }
getrandom = { version = "0.3.0-rc.0" }
chrono = "0.4.44"
sha2 = "0.10.9"
